--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
       <div class="pink">
         <img class="logo1" src="img/logo1.png" alt="">
         <img class="logo2" src="img/logo2.png" alt="">
-        <img class="logo3" src="img/logo3.png" alt="">
+        <img class="logo3" src="img/logo3.svg" alt="">
       </div>
       <div class="yellow">
         <img class="logo4" src="img/logo4.png" alt="">
-        <img class="logo5" src="img/logo5.png" alt="">
+        <img class="logo5" src="img/logo5.svg" alt="">
       </div>
       <div class="green">
-        <img class="logo6" src="img/logo6.png" alt="">
+        <img class="poster1" src="img/poster1.jpg" alt="">
+        <img class="poster2" src="img/poster2.jpg" alt="">
+        <img class="poster3" src="img/poster3.jpg" alt="">
+        <img class="poster4" src="img/poster4.jpg" alt="">
+        <img class="poster5" src="img/poster5.jpg" alt="">
+        <img class="poster6" src="img/poster6.jpg" alt="">
       </div>
     </section>
   </body>
