--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <img class="logo5" src="img/logo5.svg" alt="">
       </div>
       <div class="green">
+       <img class="logo6" src="img/logo6.png" alt="">
+      </div>
+      <img class="magazine" src="img/magazine.jpg" alt="">
+      <div class="posters">
         <img class="poster1" src="img/poster1.jpg" alt="">
         <img class="poster2" src="img/poster2.jpg" alt="">
         <img class="poster3" src="img/poster3.jpg" alt="">
